# ratex

./: Cargo.toml  README.md  config.json
src/: main.rs
src/json_parser/: mod.rs
src/models/: mod.rs
src/ratex_lib/: mod.rs
src/template_handler/: mod.rs
