[package]
name = "ratex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
http = "0.2.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
